Cambios Accordion CLASE

--- a/index.css
+++ b/index.css
@@ -82,13 +82,107 @@ background-color:#fa8778;
 background-color:#fabd4d;
 }
 
-
-
 .carrusel {
   display: flex;
   justify-content: center;
 }
 
+
+
+.container{
+  width: 100%;
+  max-width: 80rem;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
+.titulo-accordion{
+  color: black;
+
+}
+.accordion-item{
+  background-color: #000000;
+  border-radius: .4rem;
+  border: none !important;
+}
+
+.accordion-item hr{
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.accordion-link{
+  font-size: 1.6rem;
+  color: rgba(255,255,255,.8);
+  text-decoration: none;
+  background-color: #f8f8f8;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+
+.accordion-link h3{
+  font-weight:500;
+  font-size: 20px;
+}
+
+.accordion-link i{
+  color: #e7d5ff;
+  padding: .5rem;
+  
+}
+
+.accordion-link ul{
+  display:flex;
+  align-items: flex-end;
+  list-style-type: none;
+  margin-left: 25px;
+}
+
+.accordion-link li{
+  font-size: 15px;
+  color:#f6610d;
+  padding: 0 0 1px 5px;
+}
+
+.accordion-link div{
+  display: flex;
+}
+
+.accordion-link .ion-md-arrow-down{
+  display: none;
+}
+
+.answer{
+  max-height: 0;
+  overflow: hidden;
+  position: relative;
+  background-color: #f6b034;
+  transition: max-height 650ms;
+  border-radius: .4rem;
+}
+
+
+
+.answer p{
+  color: #343a40;
+  font-size: 15px;
+  padding: 2rem;
+  
+}
+
+.accordion-item:target .answer{
+  max-height: 20rem;
+}
+
+.accordion-item:target .accordion-link .ion-md-arrow-forward{
+  display: none
+}
+
+.accordion-item:target .accordion-link .ion-md-arrow-down{
+  display: block;
+}
 
 
 .nav-link,
@@ -389,13 +483,13 @@ background-color:#fabd4d;
 .paragraph1 {
   align-self: stretch;
   position: relative;
-  font-size: var(--paragraph-size);
-  line-height: 142%;
+  font-size: 20px;
+  /* line-height: 142%; */
   font-weight: 300;
   font-family: var(--link-text);
 }
 .about-header {
-  width: 707px;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -614,15 +708,7 @@ background-color:#fabd4d;
   color: var(--black);
   font-family: var(--heading-1);
 }
-.heading-21 {
-  margin: 0;
-  position: relative;
-  font-size: inherit;
-  letter-spacing: -0.03em;
-  line-height: 44px;
-  font-weight: 400;
-  font-family: inherit;
-}
+
 .heading-2-wrapper {
   align-self: stretch;
   display: flex;
