--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -79,14 +79,18 @@ border:2px solid ;
 }
 
 .item1 {
- background-color:#F2533D; 
+background-color: #F2F0E0;
   grid-column: 1;
   grid-row: 1;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+  
 }
 
 .item2 {
   background-color: #F2F0E0;
-  /* background-image: url('./assets/img/foodhero.png');  */
+ 
   background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
   background-position: center; /* Centra la imagen dentro del contenedor */
   grid-column: 2 / span 2;
@@ -96,30 +100,61 @@ border:2px solid ;
 }
 
 .item3 {
-background-color:#B6D9C9; 
+  background-color:#B6D9C9; 
+  background-size: cover; /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
+  background-position: center; /* Centra la imagen dentro del contenedor */
+  background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');
   grid-column: 1;
   grid-row: 2 / span 2;
 }
 
 .item4 {
 background-color:#214c4f;
+background-size: cover;
+  /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
+  background-position: center;
+  /* Centra la imagen dentro del contenedor */
+  background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/buscapalabra.png');
 
 }
 .item6 {
 background-color:#F2533D; 
 height: 250px; /* Establece la altura del elemento en 100 píxeles */
+display: flex;
+justify-content: center;
+align-items: center;
+color: #FFFFFF;
 }
 
 .item8 {
+  background-size: cover;
+    /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
+    background-position: center;
+    /* Centra la imagen dentro del contenedor */
+    background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/eventos-riffo.png');
 background-color:#fee400;
+display: flex;
+justify-content: center;
+align-items: center;
+color: #FFFFFF;
 }
 
 .item7 {
 background-color:#fa8778;
+display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #FFFFFF;
 }
 
 .item5 {
 background-color:#fabd4d;
+  
+    background-size: cover;
+    /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
+    background-position: center;
+    /* Centra la imagen dentro del contenedor */
+    background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/rompecabezas.png');
 }
 
 .carrusel {
