--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -40,9 +40,11 @@ section {
   display: grid;
   gap: 10px;
   padding: 10px;
-
   grid-template-columns: auto auto auto;
   grid-template-rows: 300px 300px 300px;
+  /* max-width: 1400px;  */
+  /* max-height: 900px; */
+  margin: 50px;
 }
 
 .grid-item {
@@ -53,6 +55,12 @@ section {
 
 }
 
+.texto {
+
+  font-size: 20px;
+ 
+
+}
 .subtitulo-accordion {
   color: #f2533d;
 
