--- a/index.css
+++ b/index.css
@@ -1516,7 +1516,7 @@ background-color:#fabd4d;
   z-index: 1;
 }
 .paragraph2 {
-  font-size: var(--paragraph-size);
+  font-size: 25px;
   line-height: 142%;
   font-weight: 300;
   font-family: var(--link-text);
@@ -1984,7 +1984,7 @@ background-color:#fabd4d;
     line-height: 37px;
   }
   .paragraph2 {
-    font-size: var(--font-size-mid);
+    font-size: 25px;
     line-height: 24px;
   }
   .input-field,
