--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -210,8 +210,9 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/foodhero.png'); */
-  background-image: url('/assets/img/buscapalabras.png');
+   background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/buscapalabras.png'); 
+  /* background-image: url('/assets/img/buscapalabras.png'); */
+
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
