--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -152,6 +152,7 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 
 }
 
@@ -165,6 +166,7 @@ section {
   background-position: center;
   grid-column: 2 / span 2;
   grid-row: 1 / span 2;
+  cursor: pointer;
 }
 
 .item2::before {
@@ -181,6 +183,7 @@ section {
   background-position: center;
   filter: grayscale(100%);
   transition: filter 0.5s ease;
+  cursor: pointer;
   /* Agrega transición para el cambio de filtro */
 }
 
@@ -198,6 +201,7 @@ section {
   background-position: center;
   grid-column: 1;
   grid-row: 2 / span 2;
+  cursor: pointer;
 
 }
 
@@ -219,6 +223,7 @@ section {
   filter: grayscale(100%);
   transition: filter 0.5s ease;
   /* Agrega transición para el cambio de filtro */
+  cursor: pointer;
 }
 
 .item3:hover::before {
@@ -227,6 +232,42 @@ section {
 }
 
 
+.item4 {
+  position: relative;
+  /* Añade posición relativa para poder posicionar el pseudoelemento */
+  background-color: #F2F0E0;
+  background-size: contain;
+  background-position: center;
+  cursor: pointer;
+
+
+}
+
+.item4::before {
+  content: "";
+  /* Agrega un pseudoelemento antes del contenido */
+  position: absolute;
+  /* Posiciona el pseudoelemento en relación con el contenedor */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');  */
+  background-image: url('/assets/img/kanpom.png'); 
+ 
+  background-size: cover;
+  background-position: center;
+  background-repeat:no-repeat;
+  filter: grayscale(100%);
+  transition: filter 0.5s ease;
+  cursor: pointer;
+  /* Agrega transición para el cambio de filtro */
+}
+
+.item4:hover::before {
+  filter: grayscale(0%);
+  /* Elimina la escala de grises al hacer hover */
+}
 
 
 .item5 {
@@ -235,6 +276,7 @@ section {
   background-color: #F2F0E0;
   background-size: contain;
   background-position: center;
+  cursor: pointer;
 
 
 }
@@ -248,14 +290,15 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png'); 
-  /* background-image: url('/assets/img/kanpom.png'); */
+  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');  */
+  background-image: url('/assets/img/rompecabezas.png'); 
  
   background-size: cover;
   background-position: center;
   background-repeat:no-repeat;
   filter: grayscale(100%);
   transition: filter 0.5s ease;
+  cursor: pointer;
   /* Agrega transición para el cambio de filtro */
 }
 
@@ -267,23 +310,6 @@ section {
 
 
 
-/* .item3 {
-  background-color: #B6D9C9;
-  background-size: cover;
-  background-position: center;
-  grid-column: 1;
-  grid-row: 2 / span 2;
-} */
-
-.item4 {
-  background-color: #fee400;
-  background-size: cover;
-  /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
-  background-position: center;
-  /* Centra la imagen dentro del contenedor */
-  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/buscapalabra.png'); */
-
-}
 
 .item6 {
   background-color: #F2533D;
@@ -293,6 +319,7 @@ section {
   justify-content: center;
   align-items: center;
   color: #FFFFFF;
+  cursor: pointer;
 }
 
 .item8 {
@@ -308,6 +335,7 @@ section {
   /* Aplica el efecto de escala de grises al 100% */
   transition: filter 0.5s ease;
   /* Agrega una transición suave al efecto */
+  cursor: pointer;
 }
 
 .item8:hover {
@@ -322,6 +350,8 @@ section {
   justify-content: center;
   align-items: center;
   color: #FFFFFF;
+  cursor: pointer;
+  
 }
 
 .item5 {
@@ -330,6 +360,7 @@ section {
   background-size: cover;
   /* Ajusta el tamaño de la imagen para cubrir completamente el contenedor */
   background-position: center;
+  cursor: pointer;
   /* Centra la imagen dentro del contenedor */
   /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/rompecabezas.png'); */
 }
