--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -277,8 +277,6 @@ section {
   background-size: contain;
   background-position: center;
   cursor: pointer;
-
-
 }
 
 .item5::before {
@@ -344,7 +342,7 @@ section {
 }
 
 
-.item7 {
+/* .item7 {
   background-color: #fa8778;
   display: flex;
   justify-content: center;
@@ -352,7 +350,45 @@ section {
   color: #FFFFFF;
   cursor: pointer;
   
+} */
+
+
+.item7 {
+  position: relative;
+  /* Añade posición relativa para poder posicionar el pseudoelemento */
+  background-color: #F2F0E0;
+  background-size: contain;
+  background-position: center;
+  cursor: pointer;
 }
+
+.item7::before {
+  content: "";
+  /* Agrega un pseudoelemento antes del contenido */
+  position: absolute;
+  /* Posiciona el pseudoelemento en relación con el contenedor */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');  */
+  background-image: url('/assets/img/espaciotierra.png');
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: grayscale(100%);
+  transition: filter 0.5s ease;
+  cursor: pointer;
+  /* Agrega transición para el cambio de filtro */
+}
+
+.item7:hover::before {
+  filter: grayscale(0%);
+  /* Elimina la escala de grises al hacer hover */
+}
+
+
 
 .item5 {
   background-color: #fabd4d;
