--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -252,8 +252,8 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');  */
-  background-image: url('/assets/img/kanpom.png'); 
+  background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');  
+  /* background-image: url('/assets/img/kanpom.png');  */
  
   background-size: cover;
   background-position: center;
@@ -288,8 +288,8 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');  */
-  background-image: url('/assets/img/rompecabezas.png'); 
+  background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/rompecabezas.png'); 
+  /* background-image: url('/assets/img/rompecabezas.png');  */
  
   background-size: cover;
   background-position: center;
@@ -371,8 +371,8 @@ section {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/kanpom.png');  */
-  background-image: url('/assets/img/espaciotierra.png');
+  background-image: url('https://raw.githubusercontent.com/delmonicoCL/portafolio/main/assets/img/espaciotierra.png');  
+  /* background-image: url('/assets/img/espaciotierra.png'); */
 
   background-size: cover;
   background-position: center;
