--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -478,6 +478,17 @@ body {
         margin-top: -250px;
     }
 
+.tituloAccordion {
+     margin-left: 35px;   
+}
+
+.ul li p {
+       margin-left: 3px;
+}
+
+
+
+
 }
 
 @media (min-width: 601px) and (max-width: 1024px) {
@@ -531,6 +542,141 @@ body {
     border-radius: 50px;
 }
 
-
+        ul {
+            list-style: none;
+            perspective: 900;
+            padding: 0;
+            margin: 0;
+        }
+    
+        ul li {
+            position: relative;
+            padding: 0;
+            margin: 0;
+            padding-bottom: 4px;
+            padding-top: 18px;
+            border-top: 1px dotted #dce7eb;
+        }
+    
+        /* ul li:nth-of-type(1) {
+    
+    } */
+        ul li i {
+            position: absolute;
+            transform: translate(-6px, 0);
+            margin-top: 16px;
+            right: 0;
+        }
+    
+        ul li i:before,
+        ul li i:after {
+            content: "";
+            position: absolute;
+            background-color: #ff6873;
+            width: 3px;
+            height: 9px;
+        }
+    
+        ul li i:before {
+            transform: translate(-2px, 0) rotate(45deg);
+        }
+    
+        ul li i:after {
+            transform: translate(2px, 0) rotate(-45deg);
+        }
+    
+        ul li input[type=checkbox] {
+            position: absolute;
+            cursor: pointer;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            opacity: 0;
+        }
+    
+        ul li input[type=checkbox]:checked~p {
+            margin-top: 0;
+            max-height: 0;
+            opacity: 0;
+            transform: translate(0, 50%);
+        }
+    
+        ul li input[type=checkbox]:checked~i:before {
+            transform: translate(2px, 0) rotate(45deg);
+        }
+    
+        ul li input[type=checkbox]:checked~i:after {
+            transform: translate(-2px, 0) rotate(-45deg);
+        }
+    
+    
+        ul li {
+            text-align: left;
+            /* Alinear texto a la izquierda */
+            display: flex;
+            flex-direction: column;
+            /* Centrar horizontalmente */
+        }
+    
+    
+    
+        ul li p {
+            text-align: left;
+            /* Asegurar que el texto de los párrafos esté alineado a la izquierda */
+            margin: 0 0 10px;
+            /* Ajustar el margen inferior de los párrafos */
+            max-width: 95%;
+            /* Limitar el ancho máximo para centrado */
+            margin-left: 40px;
+            font-size: larger;
+        }
+    
+    
+        ul li input[type="checkbox"],
+        ul li i {
+            margin-bottom: 10px;
+            /* Separar el checkbox y el icono del contenido */
+        }
+    
+        .tituloAccordion {
+            text-align: left !important;
+            /* Alinear texto a la izquierda */
+            font-size: 3.5rem;
+            /* Tamaño de fuente de 1.5 rem */
+            margin-left: 40px;
+            letter-spacing: -0.03em;
+            line-height: 100%;
+            font-weight: 700;
+            font-family: inherit;
+            color: #383333;
+            /* background-color: #72bc9e86; 
+         display: inline; 
+           padding: 15px;  */
+    
+            transition: font-size 0.3s ease, color 0.3s ease;
+            /* Transición suave para el efecto hover */
+        }
+    
+        .tituloAccordion:hover {
+            color: #007bff;
+            /* Cambiar a tu color preferido */
+            font-size: 3.5rem;
+            /* Aumentar el tamaño de la fuente */
+        }
+    
+        .tituloSection {
+            text-align: left !important;
+            /* Alinear texto a la izquierda */
+            font-size: 4rem;
+            /* Tamaño de fuente de 1.5 rem */
+    
+            letter-spacing: -0.03em;
+            line-height: 100%;
+            font-weight: 700;
+            font-family: inherit;
+            color: #252627;
+            transition: font-size 0.3s ease, color 0.3s ease;
+            /* Transición suave para el efecto hover */
+        }
 
 
