--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -518,9 +518,9 @@ body {
         width: 348px;
     }
 
-    .list-inline {
+    /*.list-inline {
         display: none;
-    }
+    } */
 
     .input,
     .input1,
